--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,5 +7,8 @@ steps:
 - name: 'node'
   entrypoint: 'node'
   args: ['test-firestore.js']
+- name: 'node'
+  entrypoint: 'node'
+  args: ['add-user.js']
 options:
   logging: CLOUD_LOGGING_ONLY
